# social_opd

social_opd_geo/: .gitignore  EXPERIMENTS.md  IDEA.md  README.md  readme.txt
social_opd_geo/configs/: datasets.json  losses.json  maud_full.json  no_consistency.json  no_kl.json  scalar_only.json  teachers.json
social_opd_geo/scripts/: deepseek_three_aspects.py  infer_formality_3binstruct.sh  train_then_infer_formality_opd.sh
social_opd_geo/src/: data.py  evaluate.py  inference.py  metrics.py  preprocess.py  prompts.py  schema.py  train_opd.py
social_opd_geo/tests/: test_deepseek_three_aspects.py  test_formality_opd.py  test_preprocess.py
social_opd_verbal/: EXPERIMENTS.md  IDEA.md  README.md  pyproject.toml  readme.txt  requirements.txt
social_opd_verbal/configs/: datasets.json  scalar_only.json  teachers.json
social_opd_verbal/data/: formality_test_bert.csv  formality_train_bert.csv
social_opd_verbal/scripts/: train_then_infer_formality_opd.sh
social_opd_verbal/src/: constructs.py  data.py  experiment_config.py  infer.py  inference.py  losses.py  metrics.py  preprocess.py  prompts.py  schema.py  train_opd.py
social_opd_verbal/tests/: test_evaluate.py  test_experiment_config.py  test_formality_opd.py  test_opd_losses.py  test_preprocess.py
