[project]
name = "social-opd"
version = "0.1.0"
description = "Measurement-aware uncertainty distillation for social-science calibration"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.34.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "torch>=2.2",
  "tqdm>=4.66",
  "transformers>=4.44",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
py-modules = [
  "constructs",
  "data",
  "evaluate",
  "experiment_config",
  "infer",
  "inference",
  "losses",
  "metrics",
  "preprocess",
  "prompts",
  "schema",
  "train_opd",
]
